# py-api-example

./: .env  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
app/: config.py
app/api/: main.py  users.py
app/lib/db/: __init__.py  engine.py  session.py
app/models/: __init__.py  address.py  user.py
app/schemas/: address.py  user.py
docker/: entrypoint.sh
migrations/: env.py
migrations/versions/: 2c6cbc2b5dfc_make_user_id_column_on_addresses_non_.py  73c1613e527d_create_users_and_addresses_tables.py
scripts/: run
