[tool.poetry]
name = "py-api-example"
version = "0.1.0"
description = ""
authors = ["Alexandros Peitsinis <alexpeitsinis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.89.1"}
uvicorn = {extras = ["standard"], version = "^0.20.0"}
pydantic = "^1.10.4"
SQLAlchemy = "^2.0.1"
celery = "^5.2.7"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.21.1"
black = "^23.1.0"
flake8 = "^6.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
